2025-08-22  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/gptel-config.el (deepseek-mathematician): New preset.

2025-08-22  Zhengyi Fu  <i@fuzy.me>

	* scripts/claude: Add support for DeepSeek V3.1.

2025-08-21  Zhengyi Fu  <i@fuzy.me>

	* init.el (+mail-to-help-gnu-emacs): Change binding to <help> H.

2025-08-21  Zhengyi Fu  <i@fuzy.me>

	Use C-h to delete char and adjust relevant settings

	* init.el (meow-setup): Remove ?h.
	Bind C-c h to <help>.
	(global-map): Bind C-M-h to M-DEL.

2025-08-21  Zhengyi Fu  <i@fuzy.me>

	* init.el (global-map): Bind C-h, <help> and <f1> to
	`ehelp-command'.

2025-08-21  Zhengyi Fu  <i@fuzy.me>

	* init.el: Do not unbind M-s in `paredit-mode-map'.

2025-08-21  Zhengyi Fu  <i@fuzy.me>

	* packages.el (systemd): Use default systemd recipe.

2025-08-20  Zhengyi Fu  <i@fuzy.me>

	Remove citre configurations.

	* packages.el:
	* init.el:

2025-08-20  Zhengyi Fu  <i@fuzy.me>

	* init.el: Do not add ws-butler-mode to find-file-hook any more.
	Add diff-mode to ws-butler-global-exempt-modes.

2025-08-19  Zhengyi Fu  <i@fuzy.me>

	* early-init.el (jka-compr-load-suffixes): Add ".zst".

2025-08-19  Zhengyi Fu  <i@fuzy.me>

	* init.el: Use `comint-osc-process-output'.
	(+handle-osc-8, +comint-handle-osc-8): Removed

2025-08-19  Zhengyi Fu  <i@fuzy.me>

	* init.el (+shellcheck-auto-fix): New command.

2025-08-19  Zhengyi Fu  <i@fuzy.me>

	* early-init.el: Do not call `straight-use-package' on `straight'
	explicitly.  Load packages.el without suffix.

2025-08-19  Zhengyi Fu  <i@fuzy.me>

	New macro `with-no-compile!'

	* site-lisp/dotemacs-core.el (with-no-compile!): New macro.
	* init.el: Use it.

2025-08-19  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/tui/tui.el (tui-recentf, tui-switch-project): Redirect
	error messages to stderr.

2025-08-18  Zhengyi Fu  <i@fuzy.me>

	* init.el (straight-prefix-map): Bind "U" to
	`+straight-review-updated-repos'.

2025-08-18  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/good-doc.el (good-doc--local-docs): Fix infinite loop.
